# verity-solver

./: Cargo.toml  README.md
.github/workflows/: deploy.yml  verify.yml
models/: Cargo.toml
models/src/: composite_shape.rs  lib.rs  outside_statues.rs
server/: Cargo.toml
server/src/: main.rs  solver.rs
website/: Cargo.toml  index.html  index.scss
website/src/: main.rs  normal_realm.rs  not_found.rs  route.rs  shadow_realm.rs  solver.rs
website/src/shape_picker/: button_segment.rs  container.rs  display_image.rs  mod.rs  state.rs
website/styles/: index.scss
website/styles/display/: display-border.scss  display-hex.scss  display-image.scss  index.scss
website/styles/hex/: hex-border.scss  hex-container.scss  hex-segment.scss  hex-text.scss  index.scss
